show error finding modal part solve

--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
 
 <body>
   <h1 class="title"><img src="./logo.png" /></h1>
+  <div class="buttons">
+    <button id="starts">Typing Test</button>
+    <button id="">Blog</button>
+
+  </div>
   <div id="show-time">0 seconds</div>
+
 
   <div class="box-container">
     <div id="question"></div>
@@ -23,6 +29,7 @@
 
     <div class="buttons">
       <button id="starts">START</button>
+
     </div>
 
     <div class="divider-container">
