ans session and logal stroage

--- a/blog.html
+++ b/blog.html
@@ -10,6 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Zilla+Slab:wght@300;400;500&display=swap" rel="stylesheet" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 </head>
 
 <body>
@@ -17,35 +19,29 @@
         <center>BLOG</center>
     </h1>
     <div class="buttons">
-        <button id="starts">Typing Test</button>
-        <button id="">Blog</button>
+
+
+
+
+        <a href="index.html"><button id="starts">Typing Test</button></a>
+
 
     </div>
-    <!-- <div id="show-time">0 seconds</div> -->
+    <div class="container text-white">
+        <h2>Q1: Difference between session stroage and Global stroage.</h2>
+        <p>Ans: The storage capacity of local storage is 5MB/10MB and The storage capacity of session storage is 5MB.
+            As Local stroage is not session-based, it must be deleted via javascript or manually on ther other side
+            session stroage session-based and works per window or tab. This means that data is stored only for the
+            duration of a session, i.e., until the browser (or tab) is closed
+
+        </p>
 
 
-    <!-- <div class="box-container">
-        <div id="question"></div>
 
-        <div id="display" class="inactive"></div>
-
-        <div class="buttons">
-            <button id="starts">START</button>
-
-        </div>
-
-        <div class="divider-container">
-            <div class="line"></div>
-            <h1 class="title2">History</h1>
-            <div class="line"></div>
-        </div>
-        <div id="histories"></div>
     </div>
-
-    <div id="countdown"></div>
-    <div id="modal-background" class="hidden"></div>
-    <div id="result" class="hidden"></div> -->
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8"
+        crossorigin="anonymous"></script>
     <!-- <script src="./history.js"></script>
   <script src="./script.js"></script>
   <script src="./texts.json"></script> -->
