--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <body>
   <h1 class="title"><img src="./logo.png" /></h1>
   <div class="buttons">
-    <button id="starts">Typing Test</button>
-    <button id="">Blog</button>
+
+    <a href="blog.html"><button id="">Blog</button></a>
 
   </div>
   <div id="show-time">0 seconds</div>
