global scope and block scope difference

--- a/blog.html
+++ b/blog.html
@@ -36,6 +36,14 @@
 
         </p>
 
+        <h2>Q2 : Difference between global scope and block scope.
+        </h2>
+        <p>Ans: Global scope — Global scope contains all of the things defined outside of all code blocks. A code block
+            simply consists of grouped statements inside curly braces ({ }). if statement, loops, function are examples
+            of structure that create a code block. A global variable has global scope. A global variable is accessible
+            from anywhere in the code.
+            Local Scope — Local scope contains things defined inside code blocks. A local variable has local scope. A
+            local variable is only accessible where it’s declared. </p>
 
 
     </div>
