how event loop works and and how many ways to get undefine

--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,21 @@
             from anywhere in the code.
             Local Scope — Local scope contains things defined inside code blocks. A local variable has local scope. A
             local variable is only accessible where it’s declared. </p>
-
+        <h2>Q3: What is javascript event loop and how it works?</h2>
+        <p>Ans: The event loop is a constantly running process that monitors both the callback queue and the call stack
+            If the call stack is not empty, the event loop waits until it is empty and places the next function from the
+            callback queue to the call stack. </p>
+        <h2>Q4: How many ways to get undefine ?</h2>
+        <p>Ans: There are 8 ways to get undefine <br>
+            1.variable that is not initialize will gave undefine.<br>
+            2. If Function will no return.<br>
+            3.parameter that is not passed will be undefine.<br>
+            4.if return has noting on the right side will return undefine.<br>
+            5.property dose not exit on an object will gave undefine.<br>
+            6.Accessing array element outside of the index range makes undefine.<br>
+            7. deleting an element inside an array.<br>
+            8.set a value directly undefine.<br>
+        </p>
 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"
